# Loqui

./: .boring  .gitignore  .gitlab-ci.yml  .gitpod.yml  .tokeignore  .token_chars  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  com.github.HarmonyDevelopment.Loqui.yml  default.nix  flake.nix  index.html  meson.build  mirror-to-git.sh  rust-toolchain.toml  rustfmt.toml  shell.nix  sw.js  write-cache-files.sh
.cargo/: .config-release.toml  config.toml
.github/: upx
.github/workflows/: flatpak.yml  linux.yml  mac.yml  nix.yml  pr-comment.yml  rust.yml  win.yml
build-aux/: cargo.sh
client/: Cargo.toml
client/src/: channel.rs  content.rs  emotes.rs  error.rs  guild.rs  lib.rs  member.rs  message.rs  role.rs
contrib/colorschemes/: cold-dark-blue.toml  iced-dark.toml  neon-yellow.toml
data/: com.github.HarmonyDevelopment.Loqui.desktop  com.github.HarmonyDevelopment.Loqui.metainfo.xml  manifest.json  meson.build
image_worker/: Cargo.toml
image_worker/src/: lib.rs  main.rs
nix/: Cargo.nix  README.md  build.nix  common.nix  crate-hashes.json  default.nix  devShell.nix  envrc  shell.nix  sources.json
src/: app.rs  config.rs  futures.rs  image_cache.rs  lib.rs  main.rs  meson.build  state.rs  style.rs  utils.rs  widgets.rs
src/client/: channel.rs  content.rs  error.rs  guild.rs  media.rs  member.rs  message.rs  mod.rs  room.rs  timeline_event.rs
src/component/: chan_guild_list.rs  event_history.rs  markdown.rs  mod.rs
src/fonts/: IOSEVKA_LICENSE  config.json
src/screen/: auth.rs  guild_discovery.rs  guild_settings.rs  login.rs  main.rs  mod.rs  settings.rs  template.rs
src/screen/emote_management/: manage_emotes.rs  mod.rs
src/screen/guild_settings/: channel_ordering.rs  create_channel.rs  create_edit_role.rs  edit_channel.rs  general.rs  invite.rs  manage_role_permissions.rs  manage_user_roles.rs  members.rs  roles.rs
src/screen/main/: create_channel.rs  edit_channel.rs  help.rs  help.txt  image_viewer.rs  logout.rs  profile_edit.rs  quick_switcher.rs
src/ui/: mod.rs  style.rs
src/ui/component/: chan_guild_list.rs  event_history.rs  markdown.rs  mod.rs  room_list.rs
src/ui/screen/: create_channel.rs  guild_discovery.rs  guild_settings.rs  login.rs  logout.rs  main.rs  mod.rs  room_discovery.rs
src/ui/screen/guild_settings/: general.rs
src/ui/screen/main/: create_channel.rs  edit_channel.rs  help.rs  image_viewer.rs  logout.rs  profile_edit.rs  quick_switcher.rs
src/widgets/: bg_image.rs  mod.rs
src/widgets/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs
