[package]
name = "loqui"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
description = "Rust client for the Harmony protocol."
license = "GPLv3"
repository = "https://github.com/harmony-development/loqui"
homepage = "https://github.com/harmony-development/loqui"
resolver = "2"

[workspace]
members = ["client"]

[package.metadata.bundle]
name = "Loqui"
identifier = "nodomain.yusdacra.loqui"
short_description = "Rust client for the Harmony protocol."
icon = ["./resources/loqui.ico"]

[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = false
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = false
codegen-units = 1
panic = 'abort'

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
client = { path = "./client" }

hex_color = "1"

open = "2.0.0"
rfd = "0.6"
image = "0.23.14"

tokio = { version = "1.9", features = ["rt-multi-thread", "parking_lot", "time", "fs", "macros"] }

toml = "0.5"
chrono = "0.4.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
fuzzy-matcher = "0.3.7"
notify-rust = "4"
notify = { git = "https://github.com/notify-rs/notify.git", tag = "5.0.0-pre.13" }
lazy_static = "1"

[package.metadata.nix]
longDescription = """
Loqui is a Harmony client written in Rust using the iced GUI library.

It aims to be lightweight with a good out-of-the-box experience.
"""
systems = ["x86_64-linux"]
app = true
build = true
runtimeLibs = [
    "vulkan-loader",
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi",
]

[workspace.metadata.nix]
cCompiler = "llvmPackages_12.clang"
buildInputs = ["libxkbcommon"]
devshell.packages = ["cargo-deny"]
devshell.name = "loqui-shell"
devshell.commands = [{ package = "tagref" }]

[package.metadata.nix.desktopFile]
name = "Loqui"
genericName = "Harmony Client"
categories = "Network;"
