[package]
name = "loqui"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
description = "Rust client for the Harmony protocol."
license = "GPLv3"
repository = "https://github.com/harmony-development/loqui"
homepage = "https://github.com/harmony-development/loqui"
resolver = "2"

[workspace]
members = ["client", "image_worker"]

[package.metadata.bundle]
name = "Loqui"
identifier = "nodomain.yusdacra.loqui"
short_description = "Rust client for the Harmony protocol."
icon = ["./resources/loqui.ico"]

[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = false
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = false
codegen-units = 1
panic = 'abort'

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master", default-features = false, features = [
    "egui_glow",
] }
client = { path = "./client" }
image_worker = { path = "./image_worker" }

urlencoding = "2"
webbrowser = "0.5"
rfd = { version = "0.7", default-features = false, features = ["parent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

anyhow = "1"

instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
    "Worker",
    "MessageEvent",
    "Notification",
    "NotificationOptions",
] }
rkyv = "0.7"
tokio = { version = "1.9", features = ["sync", "macros"] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
image = { version = "0.23.14", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1.9", features = ["sync", "rt-multi-thread", "macros"] }
open = "2.0"
image = "0.23.14"
notify-rust = "4"

[package.metadata.nix]
longDescription = """
Loqui is a Harmony client written in Rust using the iced GUI library.

It aims to be lightweight with a good out-of-the-box experience.
"""
systems = ["x86_64-linux"]
app = true
build = true
runtimeLibs = [
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi",
    "libGL",
]

[workspace.metadata.nix]
buildInputs = ["libxkbcommon"]
devshell.packages = ["cargo-deny", "wasm-bindgen-cli"]
devshell.name = "loqui-shell"
devshell.commands = [{ package = "tagref" }]

[package.metadata.nix.desktopFile]
name = "Loqui"
genericName = "Harmony Client"
categories = "Network;"
