[package]
name = "client"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "GPLv3"
repository = "https://github.com/harmony-development/loqui"
homepage = "https://github.com/harmony-development/loqui"

[dependencies]
harmony_rust_sdk = { git = "https://github.com/harmony-development/harmony_rust_sdk.git", branch = "master", features = ["client_native"] }

infer = "0.5.0"
directories-next = "2.0.0"

tokio = { version = "1.9", features = ["parking_lot", "time", "fs"] }
rand = "0.8"
ahash = "0.7"
indexmap = "1.7.0"
urlencoding = "2.0.0"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
tracing = "0.1"
smol_str = { version = "0.1.20", features = ["serde"] }
itertools = "0.10"