[package]
name = "client"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
license = "GPLv3"
repository = "https://github.com/harmony-development/loqui"
homepage = "https://github.com/harmony-development/loqui"

[dependencies]
infer = "0.6.0"

tokio = { version = "1.9", features = ["sync"] }
ahash = "0.7"
indexmap = "1.7.0"
urlencoding = "2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
tracing = "0.1"
smol_str = { version = "0.1.20", features = ["serde"] }

instant = { version = "0.1", features = ["wasm-bindgen"] }
lazy_static = "1"
itertools = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2.0.0"
harmony_rust_sdk = { git = "https://github.com/harmony-development/harmony_rust_sdk.git", branch = "master", features = [
    "client_native",
    "client_backoff",
    "client_recommended",
    "all_permissions",
] }
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
harmony_rust_sdk = { git = "https://github.com/harmony-development/harmony_rust_sdk.git", branch = "master", features = [
    "client_web",
    "client_backoff",
    "client_recommended",
    "all_permissions",
] }
gloo-storage = "0.2"
getrandom = { version = "0.2", features = ["js"] }
